src/main/default/objects/Checklist__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer for which the checklist displays on tickets. If no customer is specified, the checklist displays on the tickets for every customer.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Checklists (Account)</relationshipLabel>
    <relationshipName>Ticket_Check_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>