src/main/default/objects/Checklist__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <inlineHelpText>Job type for which the checklist displays on tickets. If no job type is specified, the checklist displays on tickets for every job type.</inlineHelpText>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
            <value>
                <fullName>Fixed Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>