src/main/default/objects/Checklist__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Office for which the checklist displays on tickets. If no office is specified, the checklist displays on tickets for every office.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Checklists (Office)</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>