src/main/default/objects/Checklist__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <inlineHelpText>Ticket type for which the checklist displays on tickets. If no ticket type is specified, the checklist displays on tickets for every ticket type.</inlineHelpText>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>