src/main/default/objects/Checklist__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <inlineHelpText>Unique identifier for the checklist.</inlineHelpText>
    <label>UniqueIdentifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>