src/main/default/objects/Checklist__c/fields/WeightingFactor__c.field-meta.xml
<CustomField>
    <fullName>WeightingFactor__c</fullName>
    <formula>IF(ISBLANK(TEXT(Ticket_Type__c)), 0, 16) + IF(ISBLANK(Account__c), 0, 8) + IF(ISBLANK(TEXT(Job_Type__c)),0,4) + IF(ISBLANK(Office__c),0,2) + IF(ISBLANK(TEXT(Segment__c)),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weighting factor for the checklist.</inlineHelpText>
    <label>WeightingFactor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>