src/main/default/objects/Checklist__c/listViews/All_Checklists.listView-meta.xml
<ListView>
    <fullName>All_Checklists</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Office__c</columns>
    <columns>Segment__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Ticket_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Checlists</label>
    <language>en_US</language>
</ListView>